# brawl_to_pf_sandbox

./: .gitignore  Cargo.toml  readme.md
data/projectm/fighter/: source.txt
src/: action_map.rs  bres.rs  cli.rs  export.rs  logger.rs  main.rs  mdl0.rs  parse.rs  util.rs
src/mdl0/: bones.rs  mod.rs
