[package]
name = "brawl_exporter"
version = "0.1.0"
authors = ["Rukai <rubickent@gmail.com>"]
edition = "2018"

[dependencies]
# TODO: get brawllib_rs from crates.io waiting on next three-rs version to publish brawllib_rs
brawllib_rs = { git = "https://github.com/rukai/brawllib_rs" }
cgmath = "0.16"
enum_traits = "0.3"
pf_sandbox_lib = "0.2"
ref_slice = "1"
treeflection = "0.1"
getopts = "0.2"
env_logger = "0.6"
log = "0.4"
noisy_float = "0.1"

[profile.release]
debug-assertions = true
